--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,8 +1,7 @@
 export(ltsk)
 export(lk)
 export(dnb)
-import(mvtnorm)
-import(fields)
-import(gstat)
-import(snow)
+importFrom(fields,rdist)
+importFrom(fields,quilt.plot)
+import(parallel)
 useDynLib(ltsk,lk_main)
