--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: ltsk
 Type: Package
-Title: local time space kriging
-Version: 1.0.1
-Date: 2013-07-15
-Author: Jin Chen, Jun Chen, Naresh Kumar, Dong Liang
-Maintainer: Dong Liang <dong-liang@uiowa.edu>
-Description: Implement local time space variogram estimation and kriging
+Title: Local Time Space Kriging
+Version: 1.0.2
+Date: 2014-12-31
+Author: Naresh Kumar, Dong Liang, Jin Chen, Jun Chen
+Maintainer: Dong Liang <dliang@umces.edu>
+Description: Implements local spatial and local spatiotemporal Kriging based on local spatial and local spatiotemporal variograms, respectively.
 License: GPL-2
 Depends: parallel,R (>= 2.10)
 Imports: fields
-Packaged: 2014-02-06 18:57:30 UTC; dliang
+Packaged: 2015-01-20 20:51:04 UTC; dliang
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2014-02-06 21:35:28
+Date/Publication: 2015-01-22 16:00:37
