--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,12 @@ export(ltsk.cv)
 export(cltsk)
 export(lk)
 export(dnb)
+export(tsbk)
 importFrom(fields,rdist)
 importFrom(fields,quilt.plot)
+importFrom("stats", "aggregate", "approxfun", "coef", "deviance","dist", "lm", "na.omit", "nobs", "runif", "sd", "var")
+importFrom("stats", "as.formula")
 import(parallel)
+import(gstat)
+import(sp)
 useDynLib(ltsk,lk_main)
